# rag_chat_ai_foundry

./: azure.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
infra/: main.bicep  main.parameters.json
infra/modules/: ai-foundry.bicep  ai-search.bicep  app-insights.bicep
src/universal_rag_chat/: README.md  main.py  pyproject.toml  rag_agent.py  test_agent.py
